--- a/index.html
+++ b/index.html
@@ -1,129 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TP | personal-website</title>
-    <link rel="stylesheet" href="styles/styles.css">
-    <link href='https://css.gg/phone.css' rel='stylesheet'>
-    <link href='https://css.gg/mail-open.css' rel='stylesheet'>
-</head>
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link href="https://css.gg/phone.css" rel="stylesheet" />
+    <link href="https://css.gg/mail-open.css" rel="stylesheet" />
+  </head>
 
-<body>
+  <body>
     <header class="container">
-        <h1><a href="#me" class="main-logo">TP</a></h1>
-        <nav>
-            <a href="#skills">Skills</a>
-            <a href="#bio">Bio</a>
-            <a href="#socials">Socials</a>
-        </nav>
+      <h1><a href="#me" class="main-logo">TP</a></h1>
+      <nav>
+        <a href="#skills">Skills</a>
+        <a href="#bio">Bio</a>
+        <a href="#socials">Socials</a>
+      </nav>
     </header>
 
     <a class="anchor" id="me"></a>
     <section class="container profile-section">
-        <picture >
-            <source media="(max-width:599px)" srcset="assets/images/memoji.jpg">
-            <source media="(min-width:600px)" srcset="assets/images/memoji.jpg"> <!-- New img coming soon -->
-            <img src="assets/images/memoji.jpg"alt="" width="400" height="400">
-        </picture>
-        <div>
-            <div class="h2-wrapper"><h2>#Me</h2></div>
-            <p><span class="icon wave">👋🏽</span>Hi, I am Tim</p>
-            <p><span class="icon">💻</span>Web Developer</p>
-            <p><span class="icon">⚓️</span>Hamburg</p>
-        </div>
+      <picture>
+        <source media="(max-width:599px)" srcset="assets/images/memoji.jpg" />
+        <source media="(min-width:600px)" srcset="assets/images/memoji.jpg" />
+        <!-- New img coming soon -->
+        <img src="assets/images/memoji.jpg" alt="" width="400" height="400" />
+      </picture>
+      <div>
+        <div class="h2-wrapper"><h2>#Me</h2></div>
+        <p><span class="icon wave">👋🏽</span>Hi, I am Tim</p>
+        <p><span class="icon">💻</span>Web Developer</p>
+        <p><span class="icon">⚓️</span>Hamburg</p>
+      </div>
     </section>
 
     <section class="container">
-        <a class="anchor" id="skills"></a>
-        <div class="h2-wrapper"><h2>#Skills</h2></div>
-        <div class="skills-container">
-            <div class="first-layer layer-container">
-                <div class="skills skills-first-layer"> <!--Necessary for animation to fill only textblock-->
-                    <a href="https://reactjs.org" class="link" target="_blank" rel="noopener noreferrer">React</a>
-                </div>
-                <div class="skills skills-first-layer">
-                    <a href="https://www.gatsbyjs.com" class="link" target="_blank" rel="noopener noreferrer">Gatsby</a>
-                </div>
-                <div class="skills skills-first-layer">
-                    <a href="#" class="link" target="_blank" rel="noopener noreferrer">Javasript</a>
-                </div>
-                <div class="skills skills-first-layer">
-                    <a href="#" class="link" target="_blank" rel="noopener noreferrer">Scss</a>
-                </div>
-            </div>
-            <div class="second-layer layer-container">
-                <div class="skills skills-second-layer">
-                    <a href="#" class="link" target="_blank" rel="noopener noreferrer">Html</a>
-                </div>
-                <div class="skills skills-second-layer">
-                    <a href="https://www.java.com/de/" class="link" target="_blank" rel="noopener noreferrer">Java</a>
-                </div>
-                <div class="skills skills-second-layer">
-                    <a href="https://www.figma.com" class="link" target="_blank" rel="noopener noreferrer">Figma</a>
-                </div>
-            </div>
-            <div class="third-layer layer-container">
-                <div class="skills skills-third-layer">
-                    <a href="https://webflow.com" class="link" target="_blank" rel="noopener noreferrer">Webflow</a>                    
-                </div>
-                <div class="skills skills-third-layer">
-                    <a href="https://wordpress.com/de/" class="link" target="_blank" rel="noopener noreferrer">Wordpress</a>
-                </div>
-            </div>
+      <a class="anchor" id="skills"></a>
+      <div class="h2-wrapper"><h2>#Skills</h2></div>
+      <div class="skills-container">
+        <div class="first-layer layer-container">
+          <div class="skills skills-first-layer">
+            <!--Necessary for animation to fill only textblock-->
+            <a href="https://reactjs.org" class="link" target="_blank" rel="noopener noreferrer">React</a>
+          </div>
+          <div class="skills skills-first-layer">
+            <a href="https://www.gatsbyjs.com" class="link" target="_blank" rel="noopener noreferrer">Gatsby</a>
+          </div>
+          <div class="skills skills-first-layer">
+            <a href="#" class="link" target="_blank" rel="noopener noreferrer">Javasript</a>
+          </div>
+          <div class="skills skills-first-layer">
+            <a href="#" class="link" target="_blank" rel="noopener noreferrer">Scss</a>
+          </div>
         </div>
+        <div class="second-layer layer-container">
+          <div class="skills skills-second-layer">
+            <a href="#" class="link" target="_blank" rel="noopener noreferrer">Html</a>
+          </div>
+          <div class="skills skills-second-layer">
+            <a href="https://www.java.com/de/" class="link" target="_blank" rel="noopener noreferrer">Java</a>
+          </div>
+          <div class="skills skills-second-layer">
+            <a href="https://www.figma.com" class="link" target="_blank" rel="noopener noreferrer">Figma</a>
+          </div>
+        </div>
+        <div class="third-layer layer-container">
+          <div class="skills skills-third-layer">
+            <a href="https://webflow.com" class="link" target="_blank" rel="noopener noreferrer">Webflow</a>
+          </div>
+          <div class="skills skills-third-layer">
+            <a href="https://wordpress.com/de/" class="link" target="_blank" rel="noopener noreferrer">Wordpress</a>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="container bio-section">
-        <a class="anchor" id="bio"></a>
-        <div class="h2-wrapper"><h2>#Bio</h2></div>
-        <p>I am a passionate web Developer located in Hamburg. I started Freelancing in the early months of 2020 and work currently for <a href="https://edyoucated.org/de/" target="_blank" rel="noopener noreferrer">Edyoucated</a> & <a href="https://www.vertigo-studios.de" target="_blank" rel="noopener noreferrer">Vertigo Studios</a>. My latest project is a Progressiv Web App, built in cooperation with <a href="https://www.bpc.ag" target="_blank" rel="noopener noreferrer">BPC</a>.</p>
-        <p>2019 is the year where my journey began. After graduating from Real Estate & Facility Management with a bachelors degree from the university in Münster I started over. I studied business informatic at an university for about 2 years. Getting hooked by Web Development I started as a freelancer while taking further education by <a href="https://www.techlabs.org" target="_blank" rel="noopener noreferrer">Techlabs</a> & <a href="https://www.neuefische.de" target="_blank" rel="noopener noreferrer">Neue Fische</a>.
-        </p>
-        <p>If you are interested in my latest projects, or want to deep dive in my Journey from a technical point of view, feel free to give my Portfolio <a href="https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">@Github</a> a look.</p>
+      <a class="anchor" id="bio"></a>
+      <div class="h2-wrapper"><h2>#Bio</h2></div>
+      <p>
+        I am a passionate web Developer located in Hamburg. I started Freelancing in the early months of 2020 and work
+        currently for <a href="https://edyoucated.org/de/" target="_blank" rel="noopener noreferrer">Edyoucated</a> &
+        <a href="https://www.vertigo-studios.de" target="_blank" rel="noopener noreferrer">Vertigo Studios</a>. My
+        latest project is a Progressiv Web App, built in cooperation with
+        <a href="https://www.bpc.ag" target="_blank" rel="noopener noreferrer">BPC</a>.
+      </p>
+      <p>
+        2019 is the year where my journey began. After graduating from Real Estate & Facility Management with a
+        bachelors degree from the university in Münster I started over. I studied business informatic at an university
+        for about 2 years. Getting hooked by Web Development I started as a freelancer while taking further education by
+        <a href="https://www.techlabs.org" target="_blank" rel="noopener noreferrer">Techlabs</a> &
+        <a href="https://www.neuefische.de" target="_blank" rel="noopener noreferrer">Neue Fische</a>.
+      </p>
+      <p>
+        If you are interested in my latest projects, or want to deep dive in my Journey from a technical point of view,
+        feel free to give my Portfolio
+        <a href="https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">@Github</a> a look.
+      </p>
     </section>
 
     <section class="container">
-        <a class="anchor" id="socials"></a>
-        <div class="h2-wrapper"><h2>#Socials</h2></div>
-        <div class="socials-container">
-            <div>
-                <a class="logo-container" href="https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">
-                    <div class="logo rotate git-logo"></div>
-                    <span>github</span>
-                </a>
-            </div>
-            <div>
-                <a class="logo-container" href="https://codepen.io/TimPet" target="_blank" rel="noopener noreferrer">
-                    <div class="logo rotate codepen-logo"></div>
-                    <span>codepen</span>
-                </a>
-            </div>
-            <div>
-                <a class="logo-container" href="https://www.linkedin.com/in/tim-petersen-6022121a3/" target="_blank" rel="noopener noreferrer">
-                    <div class="logo rotate linkedin-logo"></div>
-                    <span>linkedin</span>
-                </a>
-            </div>
+      <a class="anchor" id="socials"></a>
+      <div class="h2-wrapper"><h2>#Socials</h2></div>
+      <div class="socials-container">
+        <div>
+          <a class="logo-container" href="https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">
+            <div class="logo rotate git-logo"></div>
+            <span>github</span>
+          </a>
         </div>
-    
-        <div class="contact-container">
-            <h3>Contact me:</h3>
-            <div class="contact-entry">
-                <a href="tel:+4915789123500"><i class="gg-phone"></i>0157/89123500</a>
-            </div>
-            <div class="contact-entry">
-                <a href="mailto:tim.petersen1@outlook.de"><i class="gg-mail-open"></i>tim.petersen1@outlook.de</a>
-            </div>
+        <div>
+          <a class="logo-container" href="https://codepen.io/TimPet" target="_blank" rel="noopener noreferrer">
+            <div class="logo rotate codepen-logo"></div>
+            <span>codepen</span>
+          </a>
         </div>
+        <div>
+          <a
+            class="logo-container"
+            href="https://www.linkedin.com/in/tim-petersen-6022121a3/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <div class="logo rotate linkedin-logo"></div>
+            <span>linkedin</span>
+          </a>
+        </div>
+      </div>
+
+      <div class="contact-container">
+        <h3>Contact me:</h3>
+        <div class="contact-entry">
+          <a href="tel:+4915789123500"><i class="gg-phone"></i>0157/89123500</a>
+        </div>
+        <div class="contact-entry">
+          <a href="mailto:tim.petersen1@outlook.de"><i class="gg-mail-open"></i>tim.petersen1@outlook.de</a>
+        </div>
+      </div>
     </section>
 
     <script>
-        document.querySelectorAll('.link').forEach(link => {
-            link.insertAdjacentHTML('afterbegin', 
-                `<div>
+      document.querySelectorAll('.link').forEach(link => {
+        link.insertAdjacentHTML(
+          'afterbegin',
+          `<div>
                     <svg preserveAspectRatio="none" height="49" viewBox="0 0 100 80" fill="none" >
                         <rect width="100" height="70" fill="url(#paint0_linear)"/>
                         <defs>
@@ -133,9 +155,9 @@
                             </linearGradient>
                         </defs>
                     </svg>
-                </div>`)
-        });
+                </div>`
+        )
+      })
     </script>
-</body>
-
+  </body>
 </html>
