--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img src="assets/images/memoji.jpg" alt="" width="400" height="400" />
       </picture>
       <div>
-        <div class="h2-wrapper"><h2>#Me</h2></div>
+        <h2 class="h2-underlined">#Me</h2>
         <p><span class="icon wave">👋🏽</span>Hi, I am Tim</p>
         <p><span class="icon">💻</span>Web Developer</p>
         <p><span class="icon">⚓️</span>Hamburg</p>
@@ -38,7 +38,7 @@
 
     <section class="container">
       <a class="anchor" id="skills"></a>
-      <div class="h2-wrapper"><h2>#Skills</h2></div>
+      <h2 class="h2-underlined">#Skills</h2>
       <div class="skills-container">
         <div class="first-layer layer-container">
           <div class="skills skills-first-layer">
@@ -79,7 +79,7 @@
 
     <section class="container bio-section">
       <a class="anchor" id="bio"></a>
-      <div class="h2-wrapper"><h2>#Bio</h2></div>
+      <h2 class="h2-underlined">#Bio</h2>
       <p>
         I am a passionate web Developer located in Hamburg. I started Freelancing in the early months of 2020 and work
         currently for <a href="https://edyoucated.org/de/" target="_blank" rel="noopener noreferrer">Edyoucated</a> &
@@ -103,7 +103,7 @@
 
     <section class="container">
       <a class="anchor" id="socials"></a>
-      <div class="h2-wrapper"><h2>#Socials</h2></div>
+      <h2 class="h2-underlined">#Socials</h2>
       <div class="socials-container">
         <div>
           <a class="logo-container" href="https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">
