Refactor contact entry

--- a/index.html
+++ b/index.html
@@ -126,12 +126,10 @@
 
       <div class="contact-container">
         <h3>Contact me:</h3>
-        <div class="contact-entry">
-          <a href="tel:+4915789123500"><i class="gg-phone"></i>0157/89123500</a>
-        </div>
-        <div class="contact-entry">
-          <a href="mailto:tim.petersen1@outlook.de"><i class="gg-mail-open"></i>tim.petersen1@outlook.de</a>
-        </div>
+        <a href="tel:+4915789123500" class="contact-entry"><i class="gg-phone"></i><span>0157/89123500</span></a>
+        <a href="mailto:tim.petersen1@outlook.de" class="contact-entry"
+          ><i class="gg-mail-open"></i><span>tim.petersen1@outlook.de</span></a
+        >
       </div>
     </section>
 
