--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TP | personal-website</title>
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/_global.css" />
     <link href="https://css.gg/phone.css" rel="stylesheet" />
     <link href="https://css.gg/mail-open.css" rel="stylesheet" />
   </head>
