Refactor skills.css

--- a/index.html
+++ b/index.html
@@ -39,38 +39,37 @@
     <section class="container">
       <a class="anchor" id="skills"></a>
       <h2 class="h2-underlined">#Skills</h2>
-      <div class="skills-container">
-        <div class="first-layer layer-container">
-          <div class="skills skills-first-layer">
-            <!--Necessary for animation to fill only textblock-->
+      <div class="flex skills__container">
+        <div class="flex skills__layer-100w skills__layer">
+          <div class="text-center skill-25w">
             <a href="https://reactjs.org" class="link" target="_blank" rel="noopener noreferrer">React</a>
           </div>
-          <div class="skills skills-first-layer">
+          <div class="text-center skill-25w">
             <a href="https://www.gatsbyjs.com" class="link" target="_blank" rel="noopener noreferrer">Gatsby</a>
           </div>
-          <div class="skills skills-first-layer">
+          <div class="text-center skill-25w">
             <a href="#" class="link" target="_blank" rel="noopener noreferrer">Javasript</a>
           </div>
-          <div class="skills skills-first-layer">
+          <div class="text-center skill-25w">
             <a href="#" class="link" target="_blank" rel="noopener noreferrer">Scss</a>
           </div>
         </div>
-        <div class="second-layer layer-container">
-          <div class="skills skills-second-layer">
+        <div class="flex skills__layer-90w skills__layer">
+          <div class="text-center skill-33w">
             <a href="#" class="link" target="_blank" rel="noopener noreferrer">Html</a>
           </div>
-          <div class="skills skills-second-layer">
+          <div class="text-center skill-33w">
             <a href="https://www.java.com/de/" class="link" target="_blank" rel="noopener noreferrer">Java</a>
           </div>
-          <div class="skills skills-second-layer">
+          <div class="text-center skill-33w">
             <a href="https://www.figma.com" class="link" target="_blank" rel="noopener noreferrer">Figma</a>
           </div>
         </div>
-        <div class="third-layer layer-container">
-          <div class="skills skills-third-layer">
+        <div class="flex skills__layer-80w skills__layer">
+          <div class="text-center skill-50w">
             <a href="https://webflow.com" class="link" target="_blank" rel="noopener noreferrer">Webflow</a>
           </div>
-          <div class="skills skills-third-layer">
+          <div class="text-center skill-50w">
             <a href="https://wordpress.com/de/" class="link" target="_blank" rel="noopener noreferrer">Wordpress</a>
           </div>
         </div>
@@ -80,24 +79,26 @@
     <section class="container bio-section">
       <a class="anchor" id="bio"></a>
       <h2 class="h2-underlined">#Bio</h2>
-      <p>
+      <p class="bio__text">
         I am a passionate web Developer located in Hamburg. I started Freelancing in the early months of 2020 and work
-        currently for <a href="https://edyoucated.org/de/" target="_blank" rel="noopener noreferrer">Edyoucated</a> &
-        <a href="https://www.vertigo-studios.de" target="_blank" rel="noopener noreferrer">Vertigo Studios</a>. My
-        latest project is a Progressiv Web App, built in cooperation with
-        <a href="https://www.bpc.ag" target="_blank" rel="noopener noreferrer">BPC</a>.
+        currently for
+        <a class="bold" href="https://edyoucated.org/de/" target="_blank" rel="noopener noreferrer">Edyoucated</a> &
+        <a class="bold" href="https://www.vertigo-studios.de" target="_blank" rel="noopener noreferrer"
+          >Vertigo Studios</a
+        >. My latest project is a Progressiv Web App, built in cooperation with
+        <a class="bold" href="https://www.bpc.ag" target="_blank" rel="noopener noreferrer">BPC</a>.
       </p>
-      <p>
+      <p class="bio__text">
         2019 is the year where my journey began. After graduating from Real Estate & Facility Management with a
         bachelors degree from the university in Münster I started over. I studied business informatic at an university
         for about 2 years. Getting hooked by Web Development I started as a freelancer while taking further education by
-        <a href="https://www.techlabs.org" target="_blank" rel="noopener noreferrer">Techlabs</a> &
-        <a href="https://www.neuefische.de" target="_blank" rel="noopener noreferrer">Neue Fische</a>.
+        <a class="bold" href="https://www.techlabs.org" target="_blank" rel="noopener noreferrer">Techlabs</a> &
+        <a class="bold" href="https://www.neuefische.de" target="_blank" rel="noopener noreferrer">Neue Fische</a>.
       </p>
       <p>
         If you are interested in my latest projects, or want to deep dive in my Journey from a technical point of view,
         feel free to give my Portfolio
-        <a href="https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">@Github</a> a look.
+        <a class="bold" href="https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">@Github</a> a look.
       </p>
     </section>
 
