--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   </head>
 
   <body>
-    <header class="container">
-      <h1><a href="#me" class="main-logo">TP</a></h1>
-      <nav>
+    <header class="container header">
+      <h1 class="header__justified flex"><a href="#me" class="header__logo">TP</a></h1>
+      <nav class="header__justified flex">
         <a href="#skills">Skills</a>
         <a href="#bio">Bio</a>
         <a href="#socials">Socials</a>
