--- a/index.html
+++ b/index.html
@@ -104,23 +104,23 @@
     <section class="container">
       <a class="anchor" id="socials"></a>
       <h2 class="h2-underlined">#Socials</h2>
-      <div class="socials-container">
-        <a class="logo-container" href="https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">
-          <div class="logo rotate git-logo"></div>
-          <span>github</span>
+      <div class="flex socials">
+        <a class="flex socials__entry" href="https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">
+          <div class="socials__logo socials__logo-git rotate"></div>
+          <span class="socials__name">github</span>
         </a>
-        <a class="logo-container" href="https://codepen.io/TimPet" target="_blank" rel="noopener noreferrer">
-          <div class="logo rotate codepen-logo"></div>
-          <span>codepen</span>
+        <a class="flex socials__entry" href="https://codepen.io/TimPet" target="_blank" rel="noopener noreferrer">
+          <div class="socials__logo rotate socials__logo-codepen"></div>
+          <span class="socials__name">codepen</span>
         </a>
         <a
-          class="logo-container"
+          class="flex socials__entry"
           href="https://www.linkedin.com/in/tim-petersen-6022121a3/"
           target="_blank"
           rel="noopener noreferrer"
         >
-          <div class="logo rotate linkedin-logo"></div>
-          <span>linkedin</span>
+          <div class="socials__logo rotate socials__logo-linkedin"></div>
+          <span class="socials__name">linkedin</span>
         </a>
       </div>
 
