--- a/index.html
+++ b/index.html
@@ -124,11 +124,13 @@
         </a>
       </div>
 
-      <div class="contact-container">
+      <div class="contact">
         <h3>Contact me:</h3>
-        <a href="tel:+4915789123500" class="contact-entry"><i class="gg-phone"></i><span>0157/89123500</span></a>
-        <a href="mailto:tim.petersen1@outlook.de" class="contact-entry"
-          ><i class="gg-mail-open"></i><span>tim.petersen1@outlook.de</span></a
+        <a href="tel:+4915789123500" class="flex contact__entry"
+          ><i class="gg-phone contact__icon"></i><span>0157/89123500</span></a
+        >
+        <a href="mailto:tim.petersen1@outlook.de" class="flex contact-entry"
+          ><i class="gg-mail-open contact__icon"></i><span>tim.petersen1@outlook.de</span></a
         >
       </div>
     </section>
