--- a/index.html
+++ b/index.html
@@ -40,35 +40,35 @@
       <h2 class="h2-underlined">#Skills</h2>
       <div class="flex skills__container">
         <div class="flex skills__layer-100w skills__layer">
-          <div class="text-center skill-25w">
+          <div class="text-center skills__skill-25w">
             <a href="https://reactjs.org" class="link" target="_blank" rel="noopener noreferrer">React</a>
           </div>
-          <div class="text-center skill-25w">
+          <div class="text-center skills__skill-25w">
             <a href="https://www.gatsbyjs.com" class="link" target="_blank" rel="noopener noreferrer">Gatsby</a>
           </div>
-          <div class="text-center skill-25w">
+          <div class="text-center skills__skill-25w">
             <a href="#" class="link" target="_blank" rel="noopener noreferrer">Javasript</a>
           </div>
-          <div class="text-center skill-25w">
+          <div class="text-center skills__skill-25w">
             <a href="#" class="link" target="_blank" rel="noopener noreferrer">Scss</a>
           </div>
         </div>
         <div class="flex skills__layer-90w skills__layer">
-          <div class="text-center skill-33w">
+          <div class="text-center skills__skill-33w">
             <a href="#" class="link" target="_blank" rel="noopener noreferrer">Html</a>
           </div>
-          <div class="text-center skill-33w">
+          <div class="text-center skills__skill-33w">
             <a href="https://www.java.com/de/" class="link" target="_blank" rel="noopener noreferrer">Java</a>
           </div>
-          <div class="text-center skill-33w">
+          <div class="text-center skills__skill-33w">
             <a href="https://www.figma.com" class="link" target="_blank" rel="noopener noreferrer">Figma</a>
           </div>
         </div>
         <div class="flex skills__layer-80w skills__layer">
-          <div class="text-center skill-50w">
+          <div class="text-center skills__skill-50w">
             <a href="https://webflow.com" class="link" target="_blank" rel="noopener noreferrer">Webflow</a>
           </div>
-          <div class="text-center skill-50w">
+          <div class="text-center skills__skill-50w">
             <a href="https://wordpress.com/de/" class="link" target="_blank" rel="noopener noreferrer">Wordpress</a>
           </div>
         </div>
@@ -136,7 +136,7 @@
     </section>
 
     <script>
-      document.querySelectorAll('.link').forEach(link => {
+      document.querySelectorAll('.skill__link').forEach(link => {
         link.insertAdjacentHTML(
           'afterbegin',
           `<div>
