Adjust small bem issues

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
     </section>
 
-    <section class="container bio-section">
+    <section class="container">
       <a class="anchor" id="bio"></a>
       <h2 class="h2-underlined">#Bio</h2>
       <p class="bio__text">
@@ -94,7 +94,7 @@
         <a class="bold" href="https://www.techlabs.org" target="_blank" rel="noopener noreferrer">Techlabs</a> &
         <a class="bold" href="https://www.neuefische.de" target="_blank" rel="noopener noreferrer">Neue Fische</a>.
       </p>
-      <p>
+      <p class="bio__text">
         If you are interested in my latest projects, or want to deep dive in my Journey from a technical point of view,
         feel free to give my Portfolio
         <a class="bold" href="https://github.com/Tim-Pet" target="_blank" rel="noopener noreferrer">@Github</a> a look.
