Add comment; Adjust html syntax; Update Readme

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
       </picture>
       <div>
         <h2 class="h2-underlined">#Me</h2>
-        <p class="profile__text"><span class="profile__icon wave">👋🏽</span>Hi, I am Tim</p>
-        <p class="profile__text"><span class="profile__icon">💻</span>Web Developer</p>
-        <p class="profile__text"><span class="profile__icon">⚓️</span>Hamburg</p>
+        <span class="profile__icon wave">👋🏽</span>Hi, I am Tim
+        <br />
+        <span class="profile__icon">💻</span>Web Developer
+        <br />
+        <span class="profile__icon">⚓️</span>Hamburg
       </div>
     </section>
 
