Fix skill animations

--- a/index.html
+++ b/index.html
@@ -43,35 +43,37 @@
       <div class="flex skills__container">
         <div class="flex skills__layer-100w skills__layer">
           <div class="text-center skills__skill-25w">
-            <a href="https://reactjs.org" class="link" target="_blank" rel="noopener noreferrer">React</a>
+            <a href="https://reactjs.org" class="skill__link" target="_blank" rel="noopener noreferrer">React</a>
           </div>
           <div class="text-center skills__skill-25w">
-            <a href="https://www.gatsbyjs.com" class="link" target="_blank" rel="noopener noreferrer">Gatsby</a>
+            <a href="https://www.gatsbyjs.com" class="skill__link" target="_blank" rel="noopener noreferrer">Gatsby</a>
           </div>
           <div class="text-center skills__skill-25w">
-            <a href="#" class="link" target="_blank" rel="noopener noreferrer">Javasript</a>
+            <a href="#" class="skill__link" target="_blank" rel="noopener noreferrer">Javasript</a>
           </div>
           <div class="text-center skills__skill-25w">
-            <a href="#" class="link" target="_blank" rel="noopener noreferrer">Scss</a>
+            <a href="#" class="skill__link" target="_blank" rel="noopener noreferrer">Scss</a>
           </div>
         </div>
         <div class="flex skills__layer-90w skills__layer">
           <div class="text-center skills__skill-33w">
-            <a href="#" class="link" target="_blank" rel="noopener noreferrer">Html</a>
+            <a href="#" class="skill__link" target="_blank" rel="noopener noreferrer">Html</a>
           </div>
           <div class="text-center skills__skill-33w">
-            <a href="https://www.java.com/de/" class="link" target="_blank" rel="noopener noreferrer">Java</a>
+            <a href="https://www.java.com/de/" class="skill__link" target="_blank" rel="noopener noreferrer">Java</a>
           </div>
           <div class="text-center skills__skill-33w">
-            <a href="https://www.figma.com" class="link" target="_blank" rel="noopener noreferrer">Figma</a>
+            <a href="https://www.figma.com" class="skill__link" target="_blank" rel="noopener noreferrer">Figma</a>
           </div>
         </div>
         <div class="flex skills__layer-80w skills__layer">
           <div class="text-center skills__skill-50w">
-            <a href="https://webflow.com" class="link" target="_blank" rel="noopener noreferrer">Webflow</a>
+            <a href="https://webflow.com" class="skill__link" target="_blank" rel="noopener noreferrer">Webflow</a>
           </div>
           <div class="text-center skills__skill-50w">
-            <a href="https://wordpress.com/de/" class="link" target="_blank" rel="noopener noreferrer">Wordpress</a>
+            <a href="https://wordpress.com/de/" class="skill__link" target="_blank" rel="noopener noreferrer"
+              >Wordpress</a
+            >
           </div>
         </div>
       </div>
