Add htmlhint & Adjust special character escape

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <a class="bold" href="https://www.bpc.ag" target="_blank" rel="noopener noreferrer">BPC</a>.
       </p>
       <p class="bio__text">
-        2019 is the year where my journey began. After graduating from Real Estate & Facility Management with a
+        2019 is the year where my journey began. After graduating from Real Estate &amp; Facility Management with a
         bachelors degree from the university in Münster I started over. I studied business informatic at an university
         for about 2 years. Getting hooked by Web Development I started as a freelancer while taking further education by
         <a class="bold" href="https://www.techlabs.org" target="_blank" rel="noopener noreferrer">Techlabs</a> &
